I decided to go OOP instead of a megalithic class. I implemented a basic character, player, inventory, and item classes.

--- a/TextAdventureGame.csproj
+++ b/TextAdventureGame.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Text_Adventure_Game</RootNamespace>
+    <RootNamespace>TextAdventureGame</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
